# pyverum

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
python/pyverum/: __init__.py
src/: lib.rs  rules.rs  schema.rs  validator.rs
tests/: validator_test.rs
