[package]
name = "pyverum"
version = "0.1.1"
edition = "2024"
description = "Rust-based data validator with Python bindings"
license = "MIT"

[lib]
name = "pyverum"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
