[package]
name = "pyverum"
version = "0.1.3"
edition = "2024"
description = "Rust-based data validator with Python bindings"
license = "MIT"

[lib]
name = "pyverum"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
csv = "1.3"
regex = "1"
chrono = { version = "0.4.44", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
