[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyverum"
version = "0.1.2"
description = "Rust-based data validator with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.13.3",
]

[tool.maturin]
python-source = "python"
module-name = "pyverum._pyverum"
features = ["extension-module"]
